--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "http": "^0.0.1-security",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
+    "nocache": "^3.0.4",
     "nodemon": "^2.0.20",
+    "otp-generator": "^4.0.0",
     "path": "^0.12.7",
-    "razorpay": "^2.8.3"
+    "razorpay": "^2.8.3",
+    "twilio": "^3.83.0"
   }
 }
